--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta charset=“utf-8”/>
         <title>Artigo sobre o jogo Hogwarts Legacy</title>
         <link rel="stylesheet" href="style.css">
-        <img align=Center id="Banner" src="Fotos/Banner.png">
+        <img align=Center id="Banner" src="Banner.png">
     </head>
 
     <body>
-        <img align=left id="HL_1" src="Fotos/HL_1.png">
+        <img align=left id="HL_1" src="HL_1.png">
 
         <h1>Oque é Hogwarts Legacy ?</h1>
 
@@ -19,7 +19,7 @@
             de nova geração como : Playstations, PC e Xbox X/S.
         </p>
 
-        <img align=right id="HL_2" src="Fotos/HL_2.png">
+        <img align=right id="HL_2" src="HL_2.png">
 
         <h2>Quando é sitado Hogwarts Legacy ?</h2>
 
@@ -28,7 +28,7 @@
             aonde os livros e filmes de  J.K Rowling se passam.
         </p>
 
-        <img align=left id="HL_3" src="Fotos/HL_3.png">
+        <img align=left id="HL_3" src="HL_3.png">
 
         <h3>Qual a história do game ?</h3>
 
@@ -40,7 +40,7 @@
             de poder para seus interesses próprios. 
         </p>
 
-        <img align=right id="HL_4" src="Fotos/HL_4.png">
+        <img align=right id="HL_4" src="HL_4.png">
 
         <h4>Conclusão</h4>
 
